feat: simple logic added

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
           <li><button class="menu-btn" id="draw-rect-btn">矩形</button></li>
           <li><button class="menu-btn" id="draw-circ-btn">圆形</button></li>
           <li><button class="menu-btn" id="draw-line-btn">线条</button></li>
-          <li><button class="menu-btn" id="select-btn">选中</button></li>
           <li><button class="menu-btn" id="color-btn">颜色</button></li>
+          <li><button class="menu-btn" id="remove-btn">移除</button></li>
         </ul>
       </div>
-      <canvas id="canvas" width="500" height="500"></canvas>
+      <canvas id="canvas" width="1600" height="1000"></canvas>
     </main>
+    <input type="color" id="color-picker" class="color-picker" value="#ff0000" style="vertical-align: middle;">
   </body>
 </html>
