feat: file reader and saver added, canvas can load from local json file now

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
           <li><button class="menu-btn" id="draw-line-btn">线条</button></li>
           <li><button class="menu-btn" id="color-btn">颜色</button></li>
           <li><button class="menu-btn" id="remove-btn">移除</button></li>
+          <li><button class="menu-btn" id="save-btn">保存</button></li>
+          <li><button class="menu-btn" id="load-btn">加载</button></li>
         </ul>
       </div>
       <canvas id="canvas" width="1600" height="1000"></canvas>
