feat: basic api implement for circle and line added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
           <li><button class="menu-btn" id="remove-btn">移除</button></li>
           <li><button class="menu-btn" id="save-btn">保存</button></li>
           <li><button class="menu-btn" id="load-btn">加载</button></li>
+          <li><button class="menu-btn" id="rast-line-btn">线条</button></li>
+          <li><button class="menu-btn" id="rast-circ-btn">圆形</button></li>
         </ul>
       </div>
       <canvas id="canvas" width="1600" height="1000"></canvas>
